fixing navbar issue on mobile

--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -1,6 +1,8 @@
 @use'../custom' as *;
 @use'../components/mixins' as *;
-
+.nav {
+    z-index: 1;
+}
 .menu {
     @include gradient;
     z-index: 100;
